# WIFIDROP-WIN

./: CMakeLists.txt  bad.cpp  mini.cpp
src/: App.cpp  App.h  AutoStart.cpp  AutoStart.h  ConnectedDevicesWindow.cpp  ConnectedDevicesWindow.h  TrayIcon.cpp  TrayIcon.h  WiFiDrop.rc  main.cpp  resource.h
src/clients/: AndroidClient.cpp  AndroidClient.h  ClientManager.cpp  ClientManager.h
src/server/: ControlServer.cpp  ControlServer.h  DiscoveryResponder.cpp  DiscoveryResponder.h  HttpTypes.h  Protocol.h  UploadController.cpp  UploadController.h  WifiDropServer.cpp  WifiDropServer.h
src/utils/: AndroidFsHttpClient.cpp  AndroidFsHttpClient.h  DesktopFolders.cpp  DesktopFolders.h  FileName.cpp  FileName.h  Log.cpp  Log.h  Utf.cpp  Utf.h  WebClientService.cpp  WebClientService.h  WebDavDriveMapper.cpp  WebDavDriveMapper.h  WinFspDriveHost.cpp  WinFspDriveHost.h
